--- a/Recursion 2.ipynb
+++ b/Recursion 2.ipynb
@@ -24,7 +24,7 @@
    ],
    "source": [
     "#Fibonacci Series\n",
-    "#Time Complexity: O(n)\n",
+    "#Time Complexity: O(2^n)\n",
     "\n",
     "def fibo(num):\n",
     "    if num <= 1:\n",
